--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
                 Hit me up, if I don't respond I'm probably sleeping 😴😴
                 <div class="cta-detail">Let's talk here👇🏻👇🏻</div>
                 <div class="button-container">
-                    <a href="#" class="transparent-button" onclick="openLinkInBrowser('https://onlyfans.com/cutelittlecindy/c3')">
+                    <a href="https://onlyfans.com/cutelittlecindy/c3" class="transparent-button" target="_blank" rel="noopener noreferrer">
                         <img src="images/OnlyFans-Symbol.png" alt="OnlyFans Symbol" class="button-icon">
                         <span class="button-text"> Only Friends VIP</span>
                     </a>
-                    <a href="#" class="transparent-button" onclick="openLinkInBrowser('https://onlyfans.com/cutelittlecindy/c3')">
+                    <a href="https://onlyfans.com/cutelittlecindy/c3" class="transparent-button" target="_blank" rel="noopener noreferrer">
                         I Reply Hereee!!~ 💌💌💌
                     </a>
                 </div>
@@ -287,17 +287,6 @@
         </div>
     </div>
     <script>
-        function openLinkInBrowser(url) {
-            // Attempt to open the app first
-            const appScheme = 'your-app-scheme://'; // Replace with your app's scheme
-            window.location.href = appScheme;
-
-            // Fallback to web link after a short delay
-            setTimeout(function() {
-                window.location.href = url;
-            }, 2500); // Adjust delay as needed
-        }
-
         window.onload = function() {
             // Fetch geolocation and update text
             fetch('https://ipapi.co/json/')
