--- a/index.html
+++ b/index.html
@@ -267,14 +267,17 @@
                 Hit me up, if I don't respond I'm probably sleeping 😴😴
                 <div class="cta-detail">Let's talk here👇🏻👇🏻</div>
                 <div class="button-container">
-                    <button class="transparent-button" onclick="openLink('https://onlyfans.com/cutelittlecindy/c3')">
+                    <a href="https://onlyfans.com/cutelittlecindy/c3" target="_blank" class="transparent-button">
                         <img src="images/OnlyFans-Symbol.png" alt="OnlyFans Symbol" class="button-icon">
                         <span class="button-text"> Only Friends VIP</span>
-                    </button>
-                    <button class="transparent-button" onclick="openLink('https://onlyfans.com/cutelittlecindy/c3')">
-                        I Reply Hereee!!~ 💌💌💌
-                    </button>
+                    </a>
+                    <a href="https://onlyfans.com/cutelittlecindy/c3" target="_blank" class="transparent-button">
+                         I Reply Hereee!!~ 💌💌💌
+                    </a>
                 </div>
+            </div>
+            <div style="color: white; margin-top: 10px;">
+                (If the link doesn’t open, please copy and paste it into your default browser.)
             </div>
             <!-- Countdown timer -->
             <div class="timer-container">
@@ -346,10 +349,6 @@
             const dateStr = `Free until today, ${now.toDateString()}`;
             document.getElementById('date').textContent = dateStr;
         };
-
-        function openLink(url) {
-            window.open(url, '_blank'); // Open the URL in a new tab
-        }
     </script>
 </body>
 </html>
